# AndLinker

./: LICENSE  README.md  README_CN.md  gradle.properties  settings.gradle
andhooker/: build.gradle
andhooker/src/main/cpp/: CMakeLists.txt  adl_hub.cpp  adl_hub.h  adl_hub_arm64.S  adl_inline_hook.cpp  adl_plt_hook.cpp  adl_relocate.h  adl_relocate_arm.cpp  adl_relocate_arm64.cpp  adl_relocate_x86.cpp
andhooker/src/main/cpp/include/: adl_hook.h
andlinker/: build.gradle
andlinker/src/main/cpp/: adl.cpp  adl_elf_reader.cpp  adl_internal.h  adl_loader.cpp  adl_util.h
andlinker/src/main/cpp/include/: adl.h
gradle/: deps-version.gradle  gradle-repos.gradle  module-config.gradle
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/cpp/: CMakeLists.txt  sample.cpp
sample/src/main/java/com/owttwo/andlinker/sample/: MainActivity.kt
sample/src/main/res/layout/: activity_main.xml
